--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vue-tsc -b && vite build && tsc src/electron-main.ts",
+    "build:s3": "vue-tsc -b && vite build --mode s3 && tsc src/electron-main.ts",
     "preview": "vite preview",
     "pack": "npm run build && electron-builder --config",
     "pack:win": "npm run build && electron-builder --win --config",
@@ -14,6 +15,8 @@
     "pack:linux": "npm run build && electron-builder --linux --config"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.859.0",
+    "@aws-sdk/s3-request-presigner": "^3.859.0",
     "browser-tool": "^1.3.1",
     "element-plus": "^2.8.8",
     "pinia": "^2.2.6",
