--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
   
       - name: build vue vite
-        run: npm run build
+        run: npm run build:s3
   
       - name: Build Electron App for Windows
         if: matrix.os == 'windows-latest'
@@ -58,7 +58,7 @@ jobs:
           npx rimraf --glob "release/!(*.deb)"
 
       - name: upload artifacts
-        uses: actions/upload-artifact@v3.0.0
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}
           path: release
